--- a/app/templates/cart_content/_checkout_small_view.hbs
+++ b/app/templates/cart_content/_checkout_small_view.hbs
@@ -1,13 +1,13 @@
 {{#if (is-or screenresize.isSmallScreen screenresize.isMediumScreen)}}
 
-  <div class="show_cart_summary" {{action "toggleCartSummary"}}>
-    <i class="fa fa-truck cart-icon" aria-hidden="true"></i>
-    {{t 'order.cart_details.cart_summary'}}
-  </div>
+<div class="show_cart_summary" {{action "toggleCartSummary"}}>
+  <i class="cart-icon">{{fa-icon 'truck'}}</i>
+  {{t 'order.cart_details.cart_summary'}}
+</div>
 
-  {{#if showCartSummary}}
-    <div class="small-12 columns cart-section small-cart-view">
-      {{partial "cart_content/items"}}
-    </div>
-  {{/if}}
+{{#if showCartSummary}}
+<div class="small-12 columns cart-section small-cart-view">
+  {{partial "cart_content/items"}}
+</div>
+{{/if}}
 {{/if}}
