--- a/app/templates/components/add-request.hbs
+++ b/app/templates/components/add-request.hbs
@@ -1,25 +1,25 @@
 <section class="new-user-section request-section">
   <div class="request-block">
     {{#form-control}}
-        <div class="small-12 columns add-request" >
-          <div class="small-7 columns" {{action "searchPackageType" request.id order.id}}>
-            <label> {{t 'order.goods_details.type_label'}} </label>
-              {{input type="text" name="packageTypeDescription" value=packageTypeName pattern=".*\S.*" id=(concat 'packageTypeDescription' request.id) classNames="select-goods" required='true'}}
-          </div>
-          <div class="small-3 columns">
-            <label> {{t 'order.goods_details.quantity_label'}} </label>
-            {{numeric-input id=(concat 'quantity' request.id) name="qty" value=request.quantity maxlength="8" required='true' pattern="\d{1,8}" classNames="add-quantity"}}
-          </div>
-          <div class='small-2 columns icon-center remove-request remove-request-click'>
-            <i class='fa fa-times-circle fa-2x icon' {{action "removeRequest" request.id on="click"}}></i>
-          </div>
-        </div>
-        {{!-- <div class="small-12 columns"> --}}
-          <div class="small-10 columns input-error warning_empty request-error">
-            <div class='input-error'> Enter valid details. </div>
-          </div>
-          <div class='small-2 columns'>&nbsp;</div>
-        {{!-- </div> --}}
+    <div class="small-12 columns add-request">
+      <div class="small-7 columns" {{action "searchPackageType" request.id order.id}}>
+        <label> {{t 'order.goods_details.type_label'}} </label>
+        {{input type="text" name="packageTypeDescription" value=packageTypeName pattern=".*\S.*" id=(concat 'packageTypeDescription' request.id) classNames="select-goods" required='true'}}
+      </div>
+      <div class="small-3 columns">
+        <label> {{t 'order.goods_details.quantity_label'}} </label>
+        {{numeric-input id=(concat 'quantity' request.id) name="qty" value=request.quantity maxlength="8" required='true' pattern="\d{1,8}" classNames="add-quantity"}}
+      </div>
+      <div class='small-2 columns icon-center remove-request remove-request-click'>
+        <i class='icon' {{action "removeRequest" request.id on="click"}}>{{ font-icon 'times' size="2x" }}</i>
+      </div>
+    </div>
+    {{!-- <div class="small-12 columns"> --}}
+    <div class="small-10 columns input-error warning_empty request-error">
+      <div class='input-error'> Enter valid details. </div>
+    </div>
+    <div class='small-2 columns'>&nbsp;</div>
+    {{!-- </div> --}}
     {{/form-control}}
   </div>
   <div class="row">
