--- a/app/templates/components/small-cart-toggle-view.hbs
+++ b/app/templates/components/small-cart-toggle-view.hbs
@@ -1,14 +1,14 @@
 {{#if (is-or screenresize.isSmallScreen screenresize.isMediumScreen)}}
 
-  <div class="show_cart_summary" {{action "toggleCartSummary"}}>
-    <i class="fa fa-truck cart-icon" aria-hidden="true"></i>
-    {{t 'order.cart_details.cart_summary'}}
-    <i class="fa {{if showCartSummary 'fa-angle-double-up' 'fa-angle-double-down'}}" aria-hidden="true"></i>
-  </div>
+<div class="show_cart_summary" {{action "toggleCartSummary"}}>
+  <i class="cart-icon">{{fa-icon 'truck'}}</i>
+  {{t 'order.cart_details.cart_summary'}}
+  <i class="fa {{if showCartSummary 'fa-angle-double-up' 'fa-angle-double-down'}}" aria-hidden="true"></i>
+</div>
 
-  {{#if showCartSummary}}
-    <div class="small-12 columns cart-section small-cart-view">
-      {{partial "cart_content/items"}}
-    </div>
-  {{/if}}
+{{#if showCartSummary}}
+<div class="small-12 columns cart-section small-cart-view">
+  {{partial "cart_content/items"}}
+</div>
+{{/if}}
 {{/if}}
