--- a/app/templates/my_orders.hbs
+++ b/app/templates/my_orders.hbs
@@ -7,10 +7,10 @@
       <div class="row">
         <div class="columns browse button-container small-5 large-6 medium-5">
           {{#link-to "browse"}}
-            <div class="browse-button button light">
-              <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              {{t 'home.order_goods.action'}}
-            </div>
+          <div class="browse-button button light">
+            <i>{{fa-icon 'shopping-cart'}}</i>
+            {{t 'home.order_goods.action'}}
+          </div>
           {{/link-to}}
         </div>
         <div class="columns booking button-container small-5 large-6 medium-5">
@@ -19,15 +19,15 @@
       </div>
       <ul class="list list-items">
         {{#each arrangedOrders as |order|}}
-            {{#if order.isDraft}}
-              <div {{ action 'editOrder' order}}>
-                {{ partial 'order/order_block'}}
-              </div>
-            {{else}}
-              <div {{ action 'viewOrder' order}}>
-                {{ partial 'order/order_block'}}
-              </div>
-            {{/if}}
+        {{#if order.isDraft}}
+        <div {{ action 'editOrder' order}}>
+          {{ partial 'order/order_block'}}
+        </div>
+        {{else}}
+        <div {{ action 'viewOrder' order}}>
+          {{ partial 'order/order_block'}}
+        </div>
+        {{/if}}
         {{/each}}
       </ul>
     </div>
