--- a/app/templates/order/schedule_details.hbs
+++ b/app/templates/order/schedule_details.hbs
@@ -1,5 +1,5 @@
 {{#if isMobileApp}}
-  {{scroll-to-bottom customClass="appointment-detail-info-scroll-arrow"}}
+{{scroll-to-bottom customClass="appointment-detail-info-scroll-arrow"}}
 {{/if}}
 
 <div class="row">
@@ -7,7 +7,7 @@
     <div class="row checkout_pages">
       <div class="small-12 schedule_details">
         {{#if showOrderSlotSelection }}
-          {{partial "order/online_order_timeslot_list_overlay" }}
+        {{partial "order/online_order_timeslot_list_overlay" }}
         {{/if}}
 
         <section class="main-section new-user-section ui login_page book_appointment_headers">
@@ -15,110 +15,113 @@
             <section class="left-large inline-content">
               {{fa-icon "angle-left"}}
               {{#if (is-equal prevPath (is-or 'orders.booking' 'orders.goods'))}}
-                {{#link-to prevPath order.id classNames="back"}}{{t "back"}}{{/link-to}}
+              {{#link-to prevPath order.id classNames="back"}}{{t "back"}}{{/link-to}}
               {{else if isAppointment }}
-                {{#link-to 'order.goods_details' order.id classNames="back"}}{{t "back"}}{{/link-to}}
+              {{#link-to 'order.goods_details' order.id classNames="back"}}{{t "back"}}{{/link-to}}
               {{else}}
-                {{#link-to 'order.client_information' order.id classNames="back"}}{{t "back"}}{{/link-to}}
+              {{#link-to 'order.client_information' order.id classNames="back"}}{{t "back"}}{{/link-to}}
               {{/if}}
             </section>
-             <section class="middle tab-bar-section">
+            <section class="middle tab-bar-section">
               <h1 class="title"> {{t 'order.transport_details.title'}} </h1>
             </section>
-            <section {{action "cancelBookingPopUp"}} id="cancel-booking-link" class="right-large inline-content right-align">
+            <section {{action "cancelBookingPopUp"}} id="cancel-booking-link"
+              class="right-large inline-content right-align">
               {{t "cancel"}}
             </section>
           </nav>
         </section>
 
 
-          {{#validate-appointment}}
-            {{#validatable-form onSubmit=(action 'saveTransportDetails') as |form|}}
-              <section class="main-section client-information large-10 large-offset-1 medium-12 columns appointment-date small-12">
-                {{#unless cart.isEmpty}}
-                  {{small-cart-toggle-view}}
-                {{/unless}}
+        {{#validate-appointment}}
+        {{#validatable-form onSubmit=(action 'saveTransportDetails') as |form|}}
+        <section
+          class="main-section client-information large-10 large-offset-1 medium-12 columns appointment-date small-12">
+          {{#unless cart.isEmpty}}
+          {{small-cart-toggle-view}}
+          {{/unless}}
 
-                <div class="small-12 columns type-of-id-text">
-                  {{t 'order.appointment.transport'}}
-                </div>
-                <div class="row time_inputs id-type-radio-input" >
-                  <div class=" custom_radio_buttons small-12 columns purpose col-width-appointment" for="For HKID">
-                    <div class="columns small-1 radio-button">
-                      {{radio-button
+          <div class="small-12 columns type-of-id-text">
+            {{t 'order.appointment.transport'}}
+          </div>
+          <div class="row time_inputs id-type-radio-input">
+            <div class=" custom_radio_buttons small-12 columns purpose col-width-appointment" for="For HKID">
+              <div class="columns small-1 radio-button">
+                {{radio-button
                       name="selectReason"
                       id="self"
                       value="self"
                       selection=selectedId
                       required='true'}}
-                    </div>
-                    <div class="columns small-11">
-                      <label class="radio-button-text align-text self_vehicle" for="self">
-                        {{#if order.isAppointment }}
-                          {{t 'order.appointment.self_vehicle'}}
-                        {{else}}
-                          {{t 'order.online_order.self_vehicle'}}
-                        {{/if}}
-                      </label>
-                    </div>
-                  </div>
+              </div>
+              <div class="columns small-11">
+                <label class="radio-button-text align-text self_vehicle" for="self">
+                  {{#if order.isAppointment }}
+                  {{t 'order.appointment.self_vehicle'}}
+                  {{else}}
+                  {{t 'order.online_order.self_vehicle'}}
+                  {{/if}}
+                </label>
+              </div>
+            </div>
 
-                  <div class="rows custom_radio_buttons small-12 columns purpose col-width-appointment end" for="For asyLum">
-                    <div class="columns small-1 radio-button">
-                      {{radio-button
+            <div class="rows custom_radio_buttons small-12 columns purpose col-width-appointment end" for="For asyLum">
+              <div class="columns small-1 radio-button">
+                {{radio-button
                       name="selectReason"
                       id="ggv"
                       value="ggv"
                       selection=selectedId
                       required='true'}}
-                    </div>
-                    <div class="columns small-11">
-                      <label class="radio-button-text align-text hire_vehicle" for="ggv">
-                        {{#if order.isAppointment }}
-                          {{t 'order.appointment.hire_vehicle'}}
-                        {{else}}
-                          {{t 'order.online_order.hire_vehicle'}}
-                        {{/if}}
-                      </label>
-                    </div>
-                  </div>
-                </div>
-                <br>
-
-                <div class="small-12 columns type-of-id-text">
-                  {{t 'order.appointment.confirm_labor'}}
-                </div>
-
-                <div class="small-12 columns id-confidential-text">
+              </div>
+              <div class="columns small-11">
+                <label class="radio-button-text align-text hire_vehicle" for="ggv">
                   {{#if order.isAppointment }}
-                    {{t 'order.appointment.labor_info'}}
+                  {{t 'order.appointment.hire_vehicle'}}
                   {{else}}
-                    {{t 'order.online_order.labor_info'}}
+                  {{t 'order.online_order.hire_vehicle'}}
                   {{/if}}
-                </div>
-                <div class="row time_inputs id-type-radio-input" >
-                  <div class='checkbox custom_radio_buttons small-12 columns purpose col-width-appointment confirmation-checkbox'>
-                    {{input type="checkbox" name="labor" checked=false id='4' required=true}}
-                    <label class="radio-button-text  align-text" for='4'>
-                    <span class="labor_confirmation"> {{t 'order.appointment.labor_confirmation'}} </span>
-                    </label>
-                  </div>
-                </div>
-                <br>
+                </label>
+              </div>
+            </div>
+          </div>
+          <br>
 
-                {{#if order.isAppointment }}
-                    <!--
+          <div class="small-12 columns type-of-id-text">
+            {{t 'order.appointment.confirm_labor'}}
+          </div>
+
+          <div class="small-12 columns id-confidential-text">
+            {{#if order.isAppointment }}
+            {{t 'order.appointment.labor_info'}}
+            {{else}}
+            {{t 'order.online_order.labor_info'}}
+            {{/if}}
+          </div>
+          <div class="row time_inputs id-type-radio-input">
+            <div
+              class='checkbox custom_radio_buttons small-12 columns purpose col-width-appointment confirmation-checkbox'>
+              {{input type="checkbox" name="labor" checked=false id='4' required=true}}
+              <label class="radio-button-text  align-text" for='4'>
+                <span class="labor_confirmation"> {{t 'order.appointment.labor_confirmation'}} </span>
+              </label>
+            </div>
+          </div>
+          <br>
+
+          {{#if order.isAppointment }}
+          <!--
                       FULL CALENDAR SELECTION FOR APPOINTMENTS
                     -->
-                  <div class="row">
-                    <div class="small-12 columns type-of-id-text">
-                      {{t 'order.appointment.date'}}
-                    </div>
-                  </div>
+          <div class="row">
+            <div class="small-12 columns type-of-id-text">
+              {{t 'order.appointment.date'}}
+            </div>
+          </div>
 
-                  <div class="row time_inputs">
-                    <div class=" small-12 columns date_selector">
-                      {{select-appointment-date
+          <div class="row time_inputs">
+            <div class=" small-12 columns date_selector">
+              {{select-appointment-date
                         name='selectedDate'
                         id='selectedDate'
                         value=''
@@ -126,97 +129,97 @@
                         selection=selectedDate
                         placeholder="Date"
                         pattern="[a-zA-Z]{3}\s?[a-zA-Z]{3}\s?[0-9]{1,2}"}}
-                      <i class="fa fa-calendar calender_icon"></i>
-                    </div>
-                  </div>
-                {{else}}
-                  <!--
+              <i class="calender_icon">{{fa-icon 'calender'}}</i>
+            </div>
+          </div>
+          {{else}}
+          <!--
                     LIST OF UPCOMING DAYS FOR ORDERS
                   -->
-                  <div class="small-12 columns type-of-id-text">
-                    {{t 'order.online_order.preferred_date'}}
-                  </div>
+          <div class="small-12 columns type-of-id-text">
+            {{t 'order.online_order.preferred_date'}}
+          </div>
 
-                  <div class="small-12 columns id-confidential-text">
-                    {{t 'order.online_order.goods_limit'}} <br>
-                    {{t 'order.online_order.order_confirmation'}}
-                  </div>
+          <div class="small-12 columns id-confidential-text">
+            {{t 'order.online_order.goods_limit'}} <br>
+            {{t 'order.online_order.order_confirmation'}}
+          </div>
 
-                  <div class="row time_inputs" {{ action 'showOrderSlotSelectionOverlay' }}>
-                    <div class="small-12 columns online-order-time-selection">
-                      <label class="align-text">
-                        <span>
-                          {{#if selectedTimeId}}
-                            {{display-time selectedTimeId "dddd MMMM Do"}}
-                          {{else}}
-                            {{t 'order.online_order.choose_date'}}
-                          {{/if}}
-                        </span>
-                        <div class="icon">{{fa-icon "calendar"}}</div>
-                      </label>
-                    </div>
-                  </div>
-                {{/if}}
+          <div class="row time_inputs" {{ action 'showOrderSlotSelectionOverlay' }}>
+            <div class="small-12 columns online-order-time-selection">
+              <label class="align-text">
+                <span>
+                  {{#if selectedTimeId}}
+                  {{display-time selectedTimeId "dddd MMMM Do"}}
+                  {{else}}
+                  {{t 'order.online_order.choose_date'}}
+                  {{/if}}
+                </span>
+                <div class="icon">{{fa-icon "calendar"}}</div>
+              </label>
+            </div>
+          </div>
+          {{/if}}
 
-                <br>
-                {{#if order.isAppointment}}
-                  {{#if selectedDate}}
-                    <div class="small-12 columns type-of-id-text">
-                      {{t 'order.appointment.time'}}
-                    </div>
-                    <div class="row time_inputs id-type-radio-input time-slots" >
-                      {{#each timeSlots as |time|}}
-                        {{#unless time.isClosed}}
-                            <div class="custom_radio_buttons small-4 large-4 medium-4 columns end">
-                              {{radio-button
+          <br>
+          {{#if order.isAppointment}}
+          {{#if selectedDate}}
+          <div class="small-12 columns type-of-id-text">
+            {{t 'order.appointment.time'}}
+          </div>
+          <div class="row time_inputs id-type-radio-input time-slots">
+            {{#each timeSlots as |time|}}
+            {{#unless time.isClosed}}
+            <div class="custom_radio_buttons small-4 large-4 medium-4 columns end">
+              {{radio-button
                               name="selectTime"
                               id=time.timestamp
                               value=time.timestamp
                               selection=selectedTimeId
                               required='true'}}
-                              <label class="radio-button-text align-text time_slots" for={{time.timestamp}}>
-                                {{display-time time.timestamp "HH:mm"}}
-                              </label>
-                            </div>
-                        {{/unless}}
-                      {{/each}}
-                    </div>
-                    {{#if timeSlotNotSelected}}
-                      <p align="center" class="no-time-slot-selected-error">
-                        {{t "order.goods_details.no_time_slot_selected_error"}}
-                      </p>
-                    {{/if}}
-                  {{/if}}
-                {{/if}}
-                <div class="row">
-                  {{#if isEditing}}
-                    <div class="small-6 medium-6 large-6 columns">
-                      <a {{action 'submit' target=form}} id="appointment-submit" class="button expand appointment">
-                        {{t 'save_changes'}}
-                      </a>
-                    </div>
-                    <div class="small-6 medium-6 large-6 columns">
-                      {{#if (is-equal prevPath "orders.booking")}}
-                        {{#link-to 'orders.booking' order.id id="discard-button" classNames="button expand appointment"}}
-                          {{t 'discard_changes'}}
-                        {{/link-to}}
-                      {{else}}
-                        {{#link-to 'order.goods_details' order.id id="discard-button" classNames="button expand appointment"}}
-                          {{t 'discard_changes'}}
-                        {{/link-to}}
-                      {{/if}}
-                    </div>
-                  {{else}}
-                    <div class="small-12 columns">
-                      <a {{action 'submit' target=form}} id="appointment-submit" class="button expand appointment">
-                        {{t 'continue'}}
-                      </a>
-                    </div>
-                  {{/if}}
-                </div>
-              </section>
-            {{/validatable-form}}
-          {{/validate-appointment}}
+              <label class="radio-button-text align-text time_slots" for={{time.timestamp}}>
+                {{display-time time.timestamp "HH:mm"}}
+              </label>
+            </div>
+            {{/unless}}
+            {{/each}}
+          </div>
+          {{#if timeSlotNotSelected}}
+          <p align="center" class="no-time-slot-selected-error">
+            {{t "order.goods_details.no_time_slot_selected_error"}}
+          </p>
+          {{/if}}
+          {{/if}}
+          {{/if}}
+          <div class="row">
+            {{#if isEditing}}
+            <div class="small-6 medium-6 large-6 columns">
+              <a {{action 'submit' target=form}} id="appointment-submit" class="button expand appointment">
+                {{t 'save_changes'}}
+              </a>
+            </div>
+            <div class="small-6 medium-6 large-6 columns">
+              {{#if (is-equal prevPath "orders.booking")}}
+              {{#link-to 'orders.booking' order.id id="discard-button" classNames="button expand appointment"}}
+              {{t 'discard_changes'}}
+              {{/link-to}}
+              {{else}}
+              {{#link-to 'order.goods_details' order.id id="discard-button" classNames="button expand appointment"}}
+              {{t 'discard_changes'}}
+              {{/link-to}}
+              {{/if}}
+            </div>
+            {{else}}
+            <div class="small-12 columns">
+              <a {{action 'submit' target=form}} id="appointment-submit" class="button expand appointment">
+                {{t 'continue'}}
+              </a>
+            </div>
+            {{/if}}
+          </div>
+        </section>
+        {{/validatable-form}}
+        {{/validate-appointment}}
       </div>
     </div>
   </div>
